--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -9,13 +9,40 @@
   </head>
   <body>
     <a-scene background="color: #333333">
+      <a-plane
+        color="green"
+        height="100"
+        width="100"
+        rotation="-90 0 0">
+      </a-plane>
+
       <a-box id="myBox"
-        width="3"
+        width="2"
         height="2"
-        depth="1"
-        color="#BBAA33" 
-        shadow>
+        depth="2"
+        color="purple" 
+        shadow
+        position="0 1.5 -7"
+        rotation="50 40 10"
+        scale="2 1 1">
       </a-box>
+
+      <a-dodecahedron id="myBox"
+        width="2"
+        height="2"
+        depth="2"
+        color="orange"
+        shadow
+        position="4 3 -7"
+        >
+      </a-dodecahedron>
+
+      <a-text value="beep boop"
+        position="-2 4 -7"
+        color="turquoise"
+        width="10"
+        >
+        </a-text>
     </a-scene>
   </body>
 </html>
