--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -29,9 +29,10 @@
         rotation="-90 0 0" 
         width="100" 
         height="100" 
-        color="#7BC8A4" 
+        color="#7BC8A4"
+        material="src: #grass; repeat: 15 15"
         shadow
-        material="src: #grass; repeat: 15 15">
+        >
       </a-plane> 
     </a-scene>
   </body>
